# genome_assembly

./: .gitignore  CHANGELOG.md  LICENSE  README.md  de_bruijn.py  pyproject.toml  setup.py  simul.py  todo.md
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md  ROADMAP.md  TROUBLESHOOTING.md
docs/architecture/: adr-001-native-core.md  adr-002-cython-pypy-performance.md  adr-003-rust-primary-with-cython-and-cpp-lanes.md  adr-004-defer-cpp-and-gpu-lanes.md
genome_assembly/: __init__.py  _cython_backend.pyx  assemble.py  benchmark.py  cli.py  config.py  cython_backend.py  graph.py  io.py  kmers.py  metrics.py  native.py  simulate.py  sketch.py
genome_assembly/agent/: __init__.py  intents.py  repl.py  runner.py  state.py
native/genome_assembly_native/: Cargo.toml  README.md
native/genome_assembly_native/src/: lib.rs  mdbg.rs  minimizers.rs  union_find.rs
ncbi_dataset/: md5sum.txt
ncbi_dataset/ncbi_dataset/data/: data_report.jsonl  dataset_catalog.json
tests/: test_core.py
