[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "genome-assembly"
version = "0.1.0"
description = "A production-oriented genome assembly library and CLI with a path to native acceleration."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Genome Assembly Contributors" }
]
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
perf = [
  "cython>=3.0",
  "setuptools>=69",
]
native = [
  "maturin>=1.0,<2.0",
]
agent = [
  "prompt-toolkit>=3.0",
  "rich>=13.0",
]

[project.scripts]
ga = "genome_assembly.cli:app"
genome-assembly = "genome_assembly.cli:app"
oxidas = "genome_assembly.agent.repl:main"

[tool.hatch.build.targets.wheel]
packages = ["genome_assembly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
